--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.15.4",
     "fs": "0.0.1-security",
     "net": "^1.0.2",
+    "node-uuid": "^1.4.8",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^2.6.1",
