--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.18.2",
+    "dictionary-en-us": "^2.0.0",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "fs": "0.0.1-security",
     "net": "^1.0.2",
     "node-uuid": "^1.4.8",
+    "nspell": "^1.0.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^2.6.1",
