--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nspell": "^1.0.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-linkify": "^0.2.1",
     "react-router": "^2.6.1",
     "request": "^2.81.0",
     "socket.io": "^2.0.3",
