--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Dian Bakti",
   "license": "ISC",
   "dependencies": {
+    "apiai": "^4.0.3",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
